--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,18 +1,19 @@
+# $Id$
+# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 # Contributor: Roman Kyrylych <roman@archlinux.org>
 # Contributor: cdhotfire <cdhotfire@gmail.com>
-# Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=rawstudio
 pkgver=1.2
-pkgrel=3
-pkgdesc="An open source raw-image converter written in GTK+."
+pkgrel=4
+pkgdesc="An open source raw-image converter written in GTK+"
 arch=('i686' 'x86_64')
 license=('GPL')
 url="http://rawstudio.org/"
 depends=('gconf' 'libxml2' 'lcms' 'libjpeg' 'libtiff' 'desktop-file-utils' 'exiv2')
-install=rawstudio.install
+install=${pkgname}.install
 source=(http://rawstudio.org/files/release/${pkgname}-${pkgver}.tar.gz
-	rawstudio-const.patch)
+	'rawstudio-const.patch')
 md5sums=('25399cd80294fa44220a8940fc77689f'
          '6692b460e838ea56462aff7626b2dcef')
 
