--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,17 +3,17 @@
 # Maintainer: Danial Olsen <do@meyl.fo>
 
 pkgname=kvpnc
-pkgver=0.9.5
+pkgver=0.9.6
 pkgrel=1
 pkgdesc="KVpnc is a KDE Desktop Environment frontend for various vpn clients"
 arch=(i686 x86_64)
 url="http://home.gna.org/kvpnc/"
 license=("GPL")
-depends=('kdelibs')
+depends=('kdelibs' 'hicolor-icon-theme')
 makedepends=('cmake' 'automoc4')
 install=kvpnc.install
 source=(http://download.gna.org/$pkgname/$pkgname-${pkgver}-kde4.tar.bz2)
-md5sums=('ff6b1889fad13a120d6c389d9faeb213')
+md5sums=('8f176b08ad2de6160fce9ce13457f330')
 
 build() {
   cd $srcdir/${pkgname}-${pkgver}-kde4
