--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,9 +3,9 @@
 # Maintainer: JJDaNiMoTh <jjdanimoth@gmail.com>
 
 pkgname=sdlmame
-pkgver=0.136u3
-_basever=0136
-pkgrel=2
+pkgver=0.137
+_basever=0137
+pkgrel=1
 pkgdesc="A port of the popular Multiple Arcade Machine Emulator using SDL with OpenGL support."
 url="http://mamedev.org/"
 license=('custom:MAME License')
@@ -16,15 +16,12 @@ DLAGENTS=('http::/usr/bin/wget -U "Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:
 options=('force')
 install=sdlmame.install
 source=("mame${_basever}s.zip::http://mamedev.org/downloader.php?&file=mame${_basever}s.zip"
-	"http://mamedev.org/updates/0136u1_diff.zip"
-	"http://mamedev.org/updates/0136u2_diff.zip"
-	"http://mamedev.org/updates/0136u3_diff.zip"
+#	"http://mamedev.org/updates/0136u1_diff.zip"
+#	"http://mamedev.org/updates/0136u2_diff.zip"
+#	"http://mamedev.org/updates/0136u3_diff.zip"
 	"sdlmame.sh"
 	"extras.tar.gz")
-md5sums=('9ff9f3a475e3933bf3ad1f55f42bff88'
-         '1163f4cd10779aaeae4f2b6e9fc06f19'
-         'befe2cf9c79ec1819661141cf817a89e'
-         '5efb06a67ab0e743b9cfae9f6ab4da01'
+md5sums=('ce9e5359e882d5a8219821e39bd4f27a'
          '3119ccfa1e970eba4467df31208adaf0'
          '420b61240bf5ae11615ba7c6100ee00d')
 
@@ -33,10 +30,10 @@ build() {
 
   if [ $NOEXTRACT -eq 0 ]; then
     unzip mame.zip
-    find . -type f -not -name uismall.png | xargs perl -pi -e 's/\r\n?/\n/g'
-    patch -p0 -E <0136u1.diff
-    patch -p0 -E <0136u2.diff
-    patch -p0 -E <0136u3.diff
+#    find . -type f -not -name uismall.png | xargs perl -pi -e 's/\r\n?/\n/g'
+#    patch -p0 -E <0136u1.diff
+#    patch -p0 -E <0136u2.diff
+#    patch -p0 -E <0136u3.diff
     sed -i 's/-Werror//' makefile || return 1
   fi
 
