--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,27 +4,28 @@
 # Contributor: Tor Krill <tor@krill.nu>
 
 pkgname=nautilus-actions
-pkgver=1.12.2
+pkgver=2.30.0
 pkgrel=1
 pkgdesc="Configures programs to be launched when files are selected in Nautilus"
 arch=('i686' 'x86_64')
-url="http://www.grumz.net/index.php?q=node/8"
+url="http://gnome.org"
 license=('GPL')
-depends=('nautilus>=2.28' 'desktop-file-utils')
-makedepends=('intltool' 'gnome-doc-utils>=0.11.2')
+depends=('nautilus>=2.30' 'desktop-file-utils')
+makedepends=('intltool' 'gnome-doc-utils>=0.20.0')
 install=nautilus-actions.install
 options=('!libtool' '!emptydirs')
-source=(http://ftp.gnome.org/pub/GNOME/sources/nautilus-actions/1.12/$pkgname-$pkgver.tar.gz)
+source=(http://ftp.gnome.org/pub/GNOME/sources/nautilus-actions/2.30/$pkgname-$pkgver.tar.gz)
+sha256sums=('17f2327448273d14b00d805ce722a22a47e141bcdc56b5a0fa16c964804f6504')
 
 build() {
   cd $srcdir/$pkgname-$pkgver
+  unset LDFLAGS
   ./configure --prefix=/usr --sysconfdir=/etc --localstatedir=/var
   make || return 1
   make -j1 GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR=$pkgdir install || return 1
 
   mkdir -p $pkgdir/usr/share/gconf/schemas
-  gconf-merge-schema $pkgdir/usr/share/gconf/schemas/${pkgname}.schemas \
+  gconf-merge-schema $pkgdir/usr/share/gconf/schemas/${pkgname}.schemas --domain nautilus-actions \
     $pkgdir/etc/gconf/schemas/*.schemas
   rm -rf $pkgdir/etc/gconf/schemas/
 }
-md5sums=('70406d22fb8af303512b8843d655c5aa')
