--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Dmitry N.Shilov <stormblast@land.ru>
 
 pkgname=human-icon-theme
-pkgver=0.35
-pkgrel=2
+pkgver=0.36
+pkgrel=1
 pkgdesc="Ubuntu's Human icon theme"
 arch=('any')
 url="http://launchpad.net/human-icon-theme/"
@@ -12,14 +12,13 @@ license=('custom:cc-by-sa-2.5')
 depends=('tangerine-icon-theme')
 makedepends=('intltool' 'gettext' 'imagemagick' 'icon-naming-utils' 'librsvg'
              'python')
-conflicts=('dapper-icon-theme')
 source=(http://archive.ubuntu.com/ubuntu/pool/universe/h/$pkgname/${pkgname}_$pkgver.tar.gz
         archlinux-icon-crystal-48.svg)
-md5sums=('dd9bad3b7f95619a6536932300fe202a'
+md5sums=('f70beba922bbea8441799ac32db1ce7c'
          '566b77b3a0c7d8f9dd59096b2363a009')
 
 build() {
-  cd "$srcdir/$pkgname-$pkgver"
+  cd "$srcdir/$pkgname"
 
   make || return 1
   make DESTDIR="$pkgdir" install
@@ -29,11 +28,11 @@ build() {
     rsvg -w $size -h $size "$srcdir/archlinux-icon-crystal-48.svg" \
          "$pkgdir/usr/share/icons/Human/${size}x${size}/places/start-here.png"
   done
-  install -D -m644 "$srcdir/archlinux-icon-crystal-48.svg" \
+  install -Dm644 "$srcdir/archlinux-icon-crystal-48.svg" \
           "$pkgdir/usr/share/icons/Human/scalable/places/start-here.svg"
 
   # Copy over the license
-  install -D -m644 COPYING "$pkgdir/usr/share/licenses/$pkgname/COPYING"
+  install -Dm644 COPYING "$pkgdir/usr/share/licenses/$pkgname/COPYING"
 }
 
 # vim:set ts=2 sw=2 et:
