--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,17 +4,17 @@
 # Contributor: bekks <eduard.warkentin@gmx.de>
 
 pkgname=pgadmin3
-pkgver=1.10.1
-_realver=1.10.1
-pkgrel=2
+pkgver=1.10.2
+_realver=1.10.2
+pkgrel=1
 pkgdesc="A comprehensive design and management interface for PostgreSQL database"
 arch=('i686' 'x86_64')
 url="http://www.pgadmin.org"
 license=('custom')
 depends=('wxgtk' 'postgresql-libs>=8.4.1' 'libpqxx' 'libxslt')
-source=(ftp://ftp2.ru.postgresql.org/mirrors/ftp.postgresql.org/pub/pgadmin3/release/v${_realver}/src/pgadmin3-${_realver}.tar.gz
+source=(ftp://ftp.ru.postgresql.org/pub/mirrors/pgsql/pgadmin3/release/v${_realver}/src/pgadmin3-${_realver}.tar.gz
 	pgadmin3.desktop)
-md5sums=('baeec7dfcff6ec1447f6097f11c443e0'
+md5sums=('ad87e418bcf76c83d1d1218ed64e59b0'
          'd07ba4df54baead30b66d19d7450bcad')
 
 build() {
