--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,9 +1,11 @@
-# Maintainer: Douglas Soares de Andrade <dsa@aur.archlinux-br.org>
+# $Id$
+# Maintainer:
+# Contributor: Douglas Soares de Andrade <dsa@aur.archlinux-br.org>
 # Contributor: Rick Rein <jeebusroxors@gmail.com>
 
 pkgname=psqlodbc
 pkgver=08.04.0100
-pkgrel=1
+pkgrel=2
 pkgdesc="PostgreSQL ODBC driver"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -12,7 +14,7 @@ depends=('unixodbc')
 makedepends=('postgresql')
 options=('!libtool')
 source=(ftp://ftp2.it.postgresql.org/mirrors/postgres//odbc/versions/src/$pkgname-$pkgver.tar.gz
-		fix-function-declarations.patch)
+	fix-function-declarations.patch)
 md5sums=('2328c3e97e6a376620a5d317137515ff'
          'f1189f9c6ae0b5bfb5ee8423eaa4076f')
 
@@ -23,5 +25,9 @@ build() {
 
   ./configure --prefix=/usr
   make || return 1
+}
+
+package() {
+  cd "$srcdir/$pkgname-$pkgver"
   make DESTDIR="$pkgdir" install
 }
