--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -10,7 +10,7 @@ pkgdesc="PostgreSQL ODBC driver"
 arch=('i686' 'x86_64')
 license=('GPL')
 url="http://www.postgresql.org"
-depends=('unixodbc')
+depends=('unixodbc' 'postgresql-libs' 'libtool')
 makedepends=('postgresql')
 options=('!libtool')
 source=(ftp://ftp2.it.postgresql.org/mirrors/postgres//odbc/versions/src/$pkgname-$pkgver.tar.gz
