--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,9 +4,10 @@
 # Maintainer: JJDaNiMoTh <jjdanimoth@gmail.com>
 
 pkgname=sdlmame
-pkgver=0.158.u0
-_patchlevel=`echo $pkgver | cut -f2 -du`
-_basever=`echo $pkgver | cut -f1,2 -d.`
+pkgver=0.158
+#_patchlevel=`echo $pkgver | cut -f2 -du`
+#_basever=`echo $pkgver | cut -f1,2 -d.`
+_basever=$pkgver
 pkgrel=1
 pkgdesc="A port of the popular Multiple Arcade Machine Emulator using SDL with OpenGL support."
 url="http://mamedev.org/"
@@ -17,9 +18,9 @@ makedepends=('unzip' 'nasm' 'mesa' 'glu' 'wget' 'python2')
 #DLAGENTS=('http::/usr/bin/wget -U "Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.9.1.2) Gecko/20090804 Shiretoko/3.5.2" -c -t 3 --waitretry=3 -O %o %u')
 install=sdlmame.install
 
-for i in `seq 1 ${_patchlevel}`; do
-	_patches="${_patches} sdlmame-${_basever/./}u${i}_diff.zip::http://mamedev.org/updates/${_basever/./}u${i}_diff.zip"
-done
+#for i in `seq 1 ${_patchlevel}`; do
+#	_patches="${_patches} sdlmame-${_basever/./}u${i}_diff.zip::http://mamedev.org/updates/${_basever/./}u${i}_diff.zip"
+#done
 
 source=("mame${_basever/./}s.zip::http://mamedev.org/downloader.php?file=releases/mame${_basever/./}s.zip"
 	"sdlmame.sh"
@@ -34,10 +35,10 @@ build() {
   if [ $NOEXTRACT -eq 0 ]; then
     unzip mame.zip
     find . -type f -not -name \*.png | xargs perl -pi -e 's/\r\n?/\n/g'
-    for i in `seq 1 ${_patchlevel}`; do
-      msg "Patch#$i"
-      patch -p0 -E <${_basever/./}u$i.diff
-    done
+#    for i in `seq 1 ${_patchlevel}`; do
+#      msg "Patch#$i"
+#      patch -p0 -E <${_basever/./}u$i.diff
+#    done
   fi
   make NOWERROR=1 OPTIMIZE=2 PYTHON=python2
   make tools NOWERROR=1 OPTIMIZE=2 PYTHON=python2
