--- a/repos/community-any/PKGBUILD
+++ b/repos/community-any/PKGBUILD
@@ -5,7 +5,8 @@
 _targets="i686-w64-mingw32 x86_64-w64-mingw32"
 
 pkgname='mingw-w64-headers'
-pkgver=3.3.0
+pkgver=4.0rc2
+_pkgver=4.0-rc2
 pkgrel=1
 pkgdesc="MinGW-w64 headers for Windows"
 arch=('any')
@@ -13,14 +14,14 @@ url="http://mingw-w64.sourceforge.net"
 license=('custom')
 groups=('mingw-w64-toolchain' 'mingw-w64')
 options=('!strip' '!libtool' '!emptydirs')
-source=(http://sourceforge.net/projects/mingw-w64/files/mingw-w64/mingw-w64-release/mingw-w64-v${pkgver}.tar.bz2)
-md5sums=('3c56901ca7be60beba6d58caff168240')
+source=(http://sourceforge.net/projects/mingw-w64/files/mingw-w64/mingw-w64-release/mingw-w64-v${_pkgver}.tar.bz2)
+md5sums=('e08c4c0265c0e97f514695a1fa57af9e')
 
 build() {
   for _target in ${_targets}; do
     msg "Configuring ${_target} headers"
     mkdir -p ${srcdir}/headers-${_target} && cd ${srcdir}/headers-${_target}
-    ${srcdir}/mingw-w64-v${pkgver}/mingw-w64-headers/configure --prefix=/usr/${_target} --enable-sdk=all --enable-secure-api --host=${_target}
+    ${srcdir}/mingw-w64-v${_pkgver}/mingw-w64-headers/configure --prefix=/usr/${_target} --enable-sdk=all --enable-secure-api --host=${_target}
   done
 }
 
@@ -35,9 +36,9 @@ package() {
   done
 
   msg "Installing MinGW-w64 licenses"
-  install -Dm644 ${srcdir}/mingw-w64-v${pkgver}/COPYING.MinGW-w64/COPYING.MinGW-w64.txt ${pkgdir}/usr/share/licenses/${pkgname}/COPYING.MinGW-w64.txt
-  install -Dm644 ${srcdir}/mingw-w64-v${pkgver}/COPYING.MinGW-w64-runtime/COPYING.MinGW-w64-runtime.txt ${pkgdir}/usr/share/licenses/${pkgname}/COPYING.MinGW-w64-runtime.txt
-  install -Dm644 ${srcdir}/mingw-w64-v${pkgver}/mingw-w64-headers/ddk/readme.txt ${pkgdir}/usr/share/licenses/${pkgname}/ddk-readme.txt
-  install -Dm644 ${srcdir}/mingw-w64-v${pkgver}/mingw-w64-headers/direct-x/COPYING.LIB ${pkgdir}/usr/share/licenses/${pkgname}/direct-x-COPYING.LIB
-  install -Dm644 ${srcdir}/mingw-w64-v${pkgver}/mingw-w64-headers/direct-x/readme.txt ${pkgdir}/usr/share/licenses/${pkgname}/direct-x-readme.txt
+  install -Dm644 ${srcdir}/mingw-w64-v${_pkgver}/COPYING.MinGW-w64/COPYING.MinGW-w64.txt ${pkgdir}/usr/share/licenses/${pkgname}/COPYING.MinGW-w64.txt
+  install -Dm644 ${srcdir}/mingw-w64-v${_pkgver}/COPYING.MinGW-w64-runtime/COPYING.MinGW-w64-runtime.txt ${pkgdir}/usr/share/licenses/${pkgname}/COPYING.MinGW-w64-runtime.txt
+  install -Dm644 ${srcdir}/mingw-w64-v${_pkgver}/mingw-w64-headers/ddk/readme.txt ${pkgdir}/usr/share/licenses/${pkgname}/ddk-readme.txt
+  install -Dm644 ${srcdir}/mingw-w64-v${_pkgver}/mingw-w64-headers/direct-x/COPYING.LIB ${pkgdir}/usr/share/licenses/${pkgname}/direct-x-COPYING.LIB
+  install -Dm644 ${srcdir}/mingw-w64-v${_pkgver}/mingw-w64-headers/direct-x/readme.txt ${pkgdir}/usr/share/licenses/${pkgname}/direct-x-readme.txt
 }
