--- a/repos/community-i686/PKGBUILD
+++ b/repos/community-i686/PKGBUILD
@@ -1,28 +1,27 @@
 # $Id$
-# Maintainer: Felix Yan <felixonmars@gmail.com>
+# Maintainer: Felix Yan <felixonmars@archlinux.org>
 # Contributor: grimsock <lord.grimsock at gmail dot com>
 # Contributor: Dieter Plaetinck <dieter@plaetinck.be>
 # Contributor: Vladimir Chizhov <jagoterr@gmail.com>
 # Contributor: Henry Tang <henryykt@gmail.com>
 
 pkgname=phantomjs
-pkgver=1.9.8
+pkgver=2.0.0
 pkgrel=1
 pkgdesc="Headless WebKit with JavaScript API"
 url="http://www.phantomjs.org/"
 license=('BSD' 'LGPL' 'MIT')
 arch=('i686' 'x86_64')
-depends=('gstreamer0.10-base' 'fontconfig' 'freetype2' 'gcc-libs')
+depends=('icu' 'libjpeg-turbo' 'libpng' 'freetype2' 'gperf' 'ruby' 'python2' 'gstreamer0.10-base')
 makedepends=('git')
 source=("git+https://github.com/ariya/${pkgname}.git#tag=$pkgver")
 
 build() {
   cd $pkgname
-
-  # workaround for http://code.google.com/p/phantomjs/issues/detail?id=635
-  sed -i 's/QMAKE_LFLAGS+=-fuse-ld=gold/#QMAKE_LFLAGS+=-fuse-ld=gold/' src/qt/src/3rdparty/webkit/Source/common.pri
-
-  ./build.sh --confirm --qt-config "-no-rpath"
+  
+  mkdir "$srcdir/python2-path"
+  ln -s /usr/bin/python2 "$srcdir/python2-path/python"
+  PATH="$srcdir/python2-path:$PATH" PYTHON=/usr/bin/python2 ./build.sh --confirm --qt-config "-no-rpath"
 }
 
 package() {
