--- a/repos/community-any/PKGBUILD
+++ b/repos/community-any/PKGBUILD
@@ -5,8 +5,9 @@
 _targets="i686-w64-mingw32 x86_64-w64-mingw32"
 
 pkgname=mingw-w64-winpthreads
-pkgver=3.3.0
-pkgrel=2
+pkgver=4.0rc2
+_pkgver=4.0-rc2
+pkgrel=1
 pkgdesc='MinGW-w64 winpthreads library'
 arch=('any')
 url='http://mingw-w64.sourceforge.net'
@@ -17,14 +18,14 @@ provides=('mingw-w64-headers-bootstrap')
 conflicts=('mingw-w64-headers-bootstrap')
 replaces=('mingw-w64-headers-bootstrap')
 options=('!strip' '!buildflags' 'staticlibs' '!emptydirs')
-source=(http://sourceforge.net/projects/mingw-w64/files/mingw-w64/mingw-w64-release/mingw-w64-v${pkgver}.tar.bz2)
-md5sums=('3c56901ca7be60beba6d58caff168240')
+source=(http://sourceforge.net/projects/mingw-w64/files/mingw-w64/mingw-w64-release/mingw-w64-v${_pkgver}.tar.bz2)
+md5sums=('e08c4c0265c0e97f514695a1fa57af9e')
 
 build() {
   for _target in ${_targets}; do
     msg "Building ${_target} winpthreads..."
     mkdir -p ${srcdir}/winpthreads-build-${_target} && cd ${srcdir}/winpthreads-build-${_target}
-    ${srcdir}/mingw-w64-v${pkgver}/mingw-w64-libraries/winpthreads/configure --prefix=/usr/${_target} \
+    ${srcdir}/mingw-w64-v${_pkgver}/mingw-w64-libraries/winpthreads/configure --prefix=/usr/${_target} \
         --host=${_target} --enable-static --enable-shared
     make
   done
