--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Sven-Hendrik Haase <sh@lutzhaase.com>
 pkgname=wxcam
 pkgver=1.1
-pkgrel=7
+pkgrel=8
 arch=('i686' 'x86_64')
 license=(GPL)
 pkgdesc="Webcam application for linux"
@@ -12,9 +12,9 @@ _CImg_ver=1.5.8
 url="http://wxcam.sourceforge.net"
 makedepends=('intltool>=0.35.0' 'libsm')
 depends=('libglade' 'mjpegtools' 'perl-xml-parser' 'wxgtk' 'xvidcore' 'v4l-utils' 'alsa-lib')
-source=(http://downloads.sourceforge.net/wxcam/${pkgname}-${pkgver}.tar.bz2
+source=(wxcam.tar.gz::"http://wxcam.cvs.sourceforge.net/viewvc/wxcam/wxcam/?view=tar"
 	    http://downloads.sourceforge.net/cimg/CImg-${_CImg_ver}.zip)
-md5sums=('c9ea8991b6375c1709a7ce4e61fcc263'
+md5sums=('5f7058b199b93e9e3d94bca6166c1f46'
          '4941a3959f790ee68326403da1ed6dc7')
 
 prepare() {
@@ -22,12 +22,11 @@ prepare() {
 }
 
 build() {
-    cd "$srcdir"/$pkgname-$pkgver
-    ./configure --prefix=/usr
+    cd "$srcdir"/$pkgname
+    #sed -i "s/DEFAULTCONF.*/DEFAULTCONF=Release/g" nbproject/Makefile-impl.mk
     make
 }
 
 package() {
-    cd "$srcdir"/$pkgname-$pkgver
-    make DESTDIR="$pkgdir" wxcamdocdir=/usr/share/doc/wxcam install
+    cd "$srcdir"/$pkgname
 }
