--- a/repos/community-any/PKGBUILD
+++ b/repos/community-any/PKGBUILD
@@ -4,14 +4,15 @@
 
 pkgname=sage-notebook
 pkgver=0.11.4
-pkgrel=1
+pkgrel=2
 pkgdesc='Browser-based notebook interface for Sage'
-arch=('any')
+arch=(any)
 url='http://www.sagemath.org'
-license=('GPL3')
-depends=('sage-mathematics' 'python2-twisted' 'python2-flask-oldsessions' 'python2-flask-openid' 'python2-flask-autoindex' 'python2-flask-babel' 'python2-flask-silk' 'python2-webassets')
+license=(GPL3)
+depends=(sage-mathematics python2-twisted python2-flask-oldsessions python2-flask-openid python2-flask-autoindex python2-flask-babel 
+python2-webassets mathjax)
 optdepends=('python2-pyopenssl: to use the notebook in secure mode')
-makedepends=('gendesk')
+makedepends=(gendesk)
 source=("https://github.com/sagemath/sagenb/archive/$pkgver.tar.gz" 'sage.service' 'jmol.patch')
 install=$pkgname.install
 md5sums=('e8e0495d3668735c4ec2abc157c17f6b'
@@ -56,6 +57,10 @@ package() {
 
   install -D -m644 COPYING "$pkgdir"/usr/share/licenses/${pkgname}/COPYING
 
+# Use system mathjax
+  rm -r "$pkgdir"/usr/lib/python2.7/site-packages/sagenb/data/mathjax
+  ln -s /usr/share/mathjax "$pkgdir"/usr/lib/python2.7/site-packages/sagenb/data/mathjax
+
 # install a systemd user unit
   install -Dm644 "${srcdir}/sage.service" "$pkgdir/usr/lib/systemd/user/sage.service"
 # install *.desktop and icon files
@@ -63,3 +68,4 @@ package() {
   install -Dm644 "$pkgdir/usr/lib/python2.7/site-packages/sagenb/data/sage/images/icon48x48.png" \
                  "$pkgdir/usr/share/pixmaps/sage-notebook.png"
 }
+
