--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -15,7 +15,7 @@ license=('GPL')
 depends=('linux-lts>=3.14.34' 'linux-lts<3.15')
 makedepends=('linux-lts-headers>=3.14.34' 'linux-lts-headers<3.15')
 install=${pkgname}.install
-source=("https://github.com/Bumblebee-Project/bbswitch/archive/v${pkgver}.tar.gz")
+source=("${_basename}-$pkgver.tar.gz::https://github.com/Bumblebee-Project/bbswitch/archive/v${pkgver}.tar.gz")
 md5sums=('5b116b31ace3604ddf9d1fc1f4bc5807')
 
 build() {
