--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -9,7 +9,7 @@ arch=('i686' 'x86_64')
 license=('LGPL')
 url='https://qt-project.org/wiki/PySide'
 makedepends=('cmake' 'python' 'python2' 'qt4>=4.5' 'shiboken>=1.1.1' python{,2}-pyside)
-source=("https://github.com/PySide/Tools/archive/${pkgver}.tar.gz")
+source=("$pkgbase-$pkgver.tar.gz::https://github.com/PySide/Tools/archive/${pkgver}.tar.gz")
 md5sums=('e542b9536bd9d35599ede225c9311cc8')
 
 build() {
