--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -8,7 +8,8 @@ arch=(i686 x86_64)
 url='https://github.com/thestinger/paxd/'
 license=(MIT)
 depends=(glib2)
-source=(https://github.com/thestinger/paxd/archive/$pkgver.tar.gz 10-enable-pax.conf)
+source=($pkgname-$pkgver.tar.gz::https://github.com/thestinger/paxd/archive/$pkgver.tar.gz
+	10-enable-pax.conf)
 sha1sums=('870862305851470c208142ca83d8b6833eb34c45'
           '8ee73dd288bc32438078e032dfc50a2f8ea6a5f2')
 backup=(etc/paxd.conf)
